...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/b1"
                style="@style/RadioButtonStyle" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/b2"
                style="@style/RadioButtonStyle" />

...
                    android:enabled="true"
                    style="@style/NextButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/b6"
                    style="@style/NextButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>

...
